--- a/DiageoMDMWeb/src/main/webapp/outlet/createChain.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/createChain.xhtml
@@ -13,7 +13,7 @@
             <ui:define name="content">
                 <style>
                     .tamanio_letra_labels{
-                        font-size: 12px;
+                        font-size: 11px;
                     }
                     @media screen and (max-width: 1500px) {
                         .tamanio_letra_labels{
@@ -29,19 +29,7 @@
                     }
 
                 </style>
-                <h:form id="formChain">
-                    <!--p:fieldset legend="{msg.is_father}" style="width: 95%">
-                        <h:panelGrid columns="4" style="width: 100%">
-                            <h:outputLabel value="{msg.is_father}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
-                            <p:selectBooleanCheckbox />
-                            <h:outputLabel value="{msg.father}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
-                            <p:autoComplete id="acMinLength" minQueryLength="4" value="{createChainBean.chainFatherSelected}" label="{msg.father}"
-                                            var="chainFather" itemLabel="{chainFather.nameChain}" itemValue="{chainFather}" forceSelection="true"
-                                            completeMethod="{createChainBean.completeChainFather}" effect="fade" converter="chainConverter"
-                                            style="width: 90% !important;"/>
-                        </h:panelGrid>
-                    </p:fieldset>
-                    <br/-->
+                <h:form id="formChain">                    
                     <p:fieldset legend="#{msg.out_datos_basicos}" style="width: 95%">
                         <h:panelGrid columns="4" style="width: 100%">
                             <h:outputLabel value="#{msg.out_kiernan}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
@@ -108,6 +96,36 @@
                         </h:panelGroup>
                     </p:fieldset>
                     <br/>
+                    <p:fieldset legend="#{msg.customer}" style="width: 95%">
+                        <h:panelGroup id="pgCustomer">
+                            <h:panelGrid columns="3" style="width: 95%">
+                                <h:outputLabel value="#{msg.customer}" style="width: 100%;padding: 15%" styleClass="tamanio_letra_labels"/>
+                                <p:autoComplete id="acCustomer" minQueryLength="4" value="#{createChainBean.customer}" label="#{msg.customer}"
+                                                var="cus" itemLabel="#{cus.customerName}" itemValue="#{cus}" forceSelection="true"
+                                                completeMethod="#{createChainBean.completeCustomer}" effect="fade" converter="customerConverter"
+                                                style="width: 90% !important;"/>
+                                <p:commandButton value="#{msg.btn_add}" process="@parent" update="formChain:pgCustomer formChain:acCustomer"     
+                                                 actionListener="#{createChainBean.addCustomer()}"
+                                                 styleClass="button" style="width: 80%"/>
+                            </h:panelGrid>
+                            <br/>
+                            <p:dataTable id="dtCustomer" styleClass="paginated" paginatorAlwaysVisible="false" paginator="true" rows="5"
+                                         value="#{createChainBean.listCustomers}" var="custo">
+                                <p:column headerText="#{msg.customer}">
+                                    <h:outputLabel value="#{custo.customerName}"/>
+                                </p:column>
+                                <p:column headerText="#{msg.out_kiernan}">
+                                    <h:outputLabel value="#{custo.kiernanId}"/>
+                                </p:column>
+                                <p:column>
+                                    <p:commandLink actionListener="#{createChainBean.deleteCustomer(custo)}" update="formChain:dtCustomer" process="@this">
+                                        <p:graphicImage value="/resources/images/iconos/equis.png" width="12px"/>
+                                    </p:commandLink>
+                                </p:column>
+                            </p:dataTable>
+                        </h:panelGroup>
+                    </p:fieldset>
+                    <br/>
                     <p:fieldset legend="#{msg.out_ubicacion}" style="width: 95%">
                         <h:panelGroup id="pgLocation">
                             <h:panelGrid columns="4" style="width: 95%">
@@ -156,17 +174,17 @@
                                      value="#{createChainBean.listPhones}" var="phone">
                             <f:facet name="header">
                                 <h:outputLabel value="#{msg.out_phones}"/>
-                            </f:facet>
-                            <p:column>
-                                <p:commandLink actionListener="#{createChainBean.deletePhone(phone)}" update="formChain:dlPhones" process="@this">
-                                    <p:graphicImage value="/resources/images/iconos/equis.png" width="12px"/>
-                                </p:commandLink>
-                            </p:column>
+                            </f:facet>                            
                             <p:column>
                                 <h:outputLabel value="#{phone.numberPhone}"/>
                             </p:column>
                             <p:column>
                                 <h:outputLabel value="#{phone.typePhoneId.nameTypePhone}"/>
+                            </p:column>
+                            <p:column>
+                                <p:commandLink actionListener="#{createChainBean.deletePhone(phone)}" update="formChain:dlPhones" process="@this">
+                                    <p:graphicImage value="/resources/images/iconos/equis.png" width="12px"/>
+                                </p:commandLink>
                             </p:column>
                         </p:dataTable>
                     </p:fieldset>
